# elfuscator

./: CMakeLists.txt  README.md
src/: cryptor.c  cryptor.h  dumps.c  dumps.h  dynsym.c  dynsym.h  fileio.c  fileio.h  main.c  spoof.c  spoof.h  strip.c  strip.h  tracers.c  tracers.h
